--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,14 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.TechNestFinal" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-    </style>
+<resources>
+    <!-- Base app theme -->
+    <style name="Base.Theme.TechNestFinal" parent="Theme.Material3.DayNight.NoActionBar" />
 
+    <!-- Main app theme -->
     <style name="Theme.TechNestFinal" parent="Base.Theme.TechNestFinal" />
+
+    <!-- Default splash theme: this only sets windowBackground to solid blue -->
+    <style name="Theme.TechNestFinal.Splash" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash_background</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+
+    </style>
 </resources>
