--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,7 +18,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-
     <!-- Sign In Title -->
     <TextView
         android:id="@+id/signInTitle"
@@ -34,7 +33,6 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- Username -->
-    <!-- Username -->
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/usernameLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -43,6 +41,8 @@
         android:layout_marginTop="12dp"
         android:layout_marginHorizontal="32dp"
         app:boxBackgroundMode="outline"
+        app:boxStrokeColor="#2664f5"
+        app:hintTextColor="#2664f5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/signInTitle">
@@ -52,7 +52,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/user"
+            android:background="@drawable/edittext_border"
             android:drawablePadding="8dp"
+            android:textColor="#2664f5"
+            android:textColorHint="#2664f5"
             android:hint="User name" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -66,6 +69,8 @@
         android:layout_marginHorizontal="32dp"
         app:boxBackgroundMode="outline"
         app:endIconMode="password_toggle"
+        app:boxStrokeColor="#2664f5"
+        app:hintTextColor="#2664f5"
         app:layout_constraintTop_toBottomOf="@id/usernameLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -75,15 +80,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/padlock"
+            android:background="@drawable/edittext_border"
             android:drawablePadding="8dp"
+            android:textColor="#2664f5"
+            android:textColorHint="#2664f5"
             android:hint="Password"
             android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
-
     <!-- Login Button -->
-
-    <!-- Sign Up Text -->
     <Button
         android:id="@+id/loginButton"
         android:layout_width="0dp"
@@ -99,6 +104,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/passwordLayout" />
 
+    <!-- Sign Up Prompt -->
     <TextView
         android:id="@+id/signUpPrompt"
         android:layout_width="wrap_content"
@@ -106,10 +112,10 @@
         android:text="Don't have an account?"
         android:textSize="14sp"
         android:textColor="#000000"
+        android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/loginButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- Sign Up Link -->
     <TextView
@@ -120,9 +126,9 @@
         android:textColor="#0C4A93"
         android:textStyle="bold"
         android:textSize="14sp"
+        android:layout_marginTop="4dp"
         app:layout_constraintTop_toBottomOf="@id/signUpPrompt"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="4dp" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
