--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
+    android:fillViewport="true"
     android:background="@android:color/white">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="16dp">
 
     <!-- Logo -->
     <ImageView
@@ -42,6 +46,8 @@
         android:layout_marginTop="26dp"
         android:layout_marginHorizontal="12dp"
         app:boxBackgroundMode="outline"
+        app:boxStrokeColor="#2664f5"
+        app:hintTextColor="#2664f5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title">
@@ -51,6 +57,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/user"
+            android:background="@drawable/edittext_border"
+            android:textColor="#2664f5"
+            android:textColorHint="#2664f5"
             android:drawablePadding="8dp"
             android:hint="Username"
             android:inputType="textPersonName" />
@@ -63,6 +72,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:boxBackgroundMode="outline"
+        app:boxStrokeColor="#2664f5"
+        app:hintTextColor="#2664f5"
         android:layout_marginTop="12dp"
         android:layout_marginHorizontal="12dp"
         app:layout_constraintTop_toBottomOf="@id/usernameLayout"
@@ -74,6 +85,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/mail"
+            android:background="@drawable/edittext_border"
+            android:textColor="#2664f5"
+            android:textColorHint="#2664f5"
             android:drawablePadding="8dp"
             android:hint="Email"
             android:inputType="textEmailAddress" />
@@ -87,6 +101,8 @@
         android:layout_height="wrap_content"
         app:boxBackgroundMode="outline"
         app:endIconMode="password_toggle"
+        app:boxStrokeColor="#2664f5"
+        app:hintTextColor="#2664f5"
         android:layout_marginTop="12dp"
         android:layout_marginHorizontal="12dp"
         app:layout_constraintTop_toBottomOf="@id/emailLayout"
@@ -98,7 +114,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/padlock"
+            android:background="@drawable/edittext_border"
             android:drawablePadding="8dp"
+            android:textColor="#2664f5"
+            android:textColorHint="#2664f5"
             android:hint="Password"
             android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -111,6 +130,8 @@
         android:layout_height="wrap_content"
         app:boxBackgroundMode="outline"
         app:endIconMode="password_toggle"
+        app:boxStrokeColor="#2664f5"
+        app:hintTextColor="#2664f5"
         android:layout_marginTop="12dp"
         android:layout_marginHorizontal="12dp"
         app:layout_constraintTop_toBottomOf="@id/passwordLayout"
@@ -122,10 +143,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/padlock"
+            android:background="@drawable/edittext_border"
+            android:textColor="#2664f5"
+            android:textColorHint="#2664f5"
             android:drawablePadding="8dp"
             android:hint="Confirm Password"
             android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
+
 
     <!-- Sign Up Button -->
     <Button
@@ -158,3 +183,4 @@
         app:tint="@color/black" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
