--- a/app/src/main/res/layout/dialog_deleted.xml
+++ b/app/src/main/res/layout/dialog_deleted.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="300dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="24dp"
     android:gravity="center"
-    android:background="@drawable/dialog_bg">
+    android:background="@drawable/dialog_bg"
+    android:elevation="8dp">
 
     <TextView
         android:id="@+id/deletedText"
@@ -16,13 +17,13 @@
         android:textStyle="bold"
         android:textSize="18sp"
         android:textColor="@android:color/black"
-        android:layout_marginBottom="16dp" />
-
+        android:layout_marginBottom="16dp"
+        android:gravity="center" />
 
     <com.airbnb.lottie.LottieAnimationView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         app:lottie_rawRes="@raw/deleted"
         app:lottie_autoPlay="true"
-        app:lottie_loop="false"/>
+        app:lottie_loop="false" />
 </LinearLayout>
